Made css image link protocol-relative

--- a/css/maps.css
+++ b/css/maps.css
@@ -50,7 +50,7 @@ p.showhide {
   padding: 15px 10px;
 }
 #fullscreen_link {
-  background-image: url('http://www.york.ac.uk/media/global/templateimages/fullscreen.png');
+  background-image: url('//www.york.ac.uk/media/global/templateimages/fullscreen.png');
   background-repeat: no-repeat;
   display: block;
   height: 14px;
