Linking up with the API, guessing wrongly-written rooms

--- a/css/maps.css
+++ b/css/maps.css
@@ -1,3 +1,9 @@
+#room-search-message {
+  display:none;
+}
+#room-search-message.active {
+  display:block;
+}
 #mapcontainer {
   margin-top: 25px;
   background-color: #eee;
