Amends to styling and error text

--- a/css/maps.css
+++ b/css/maps.css
@@ -140,13 +140,13 @@ div#mdcolumn ul.tabNavigation li a.selected, div#mdcolumn ul.tabNavigation li a.
   display:table;
 }
 #room-search-value {
-  width:56%;
+  width:62%;
   padding:6px 2%;
   display:table-cell;
   vertical-align:bottom;
 }
 #room-search-submit {
-  width:36%;
+  width:30%;
   height:29px;
   line-height:27px;
   padding-left:2%;
@@ -156,6 +156,9 @@ div#mdcolumn ul.tabNavigation li a.selected, div#mdcolumn ul.tabNavigation li a.
 }
 #room-search-message {
   margin:1em 0;
+}
+#room-search-message p{
+  font-size:1em;
 }
 #room-search-message h4 {
   margin:0 0 1em;
