--- a/css/maps.css
+++ b/css/maps.css
@@ -56,7 +56,7 @@ p.showhide {
   padding: 15px 10px;
 }
 #fullscreen_link {
-  background-image: url('//www.york.ac.uk/media/global/templateimages/fullscreen.png');
+  background-image: url(https://www.york.ac.uk/media/global/templateimages/fullscreen.png);
   background-repeat: no-repeat;
   display: block;
   height: 14px;
