--- a/css/map.css
+++ b/css/map.css
@@ -6,6 +6,19 @@ body {
   width: 100%;
 }
 
+.c-map-header {
+    border-bottom: 2px solid #f9f9f9;
+    background-color: #0f3d4c;
+    height: 5rem;
+}
+
+.c-map-header__title {
+    color: #fdfdfd;
+    font-size: 2rem;
+    margin: 1.25rem;
+    width: 100%;
+}
+
 .c-map-container {
   position: relative;
 
@@ -16,6 +29,150 @@ body {
 }
 
 
+.footer {
+  border-top: 2px solid #f9f9f9;
+  background-color: #fff;
+  width: 100%;
+  position: fixed;
+  padding: 0;
+  bottom: 0;
+}
+.panel {
+  display: none;
+}
+.bar {
+  background-color: #0f3d4c;
+  line-height: 1.5;
+  padding: .25em;
+  text-align: center;
+}
+.bar a {
+  display: block;
+  height: 100%;
+  color: #fff;
+  text-decoration: none;
+}
+
+
+
+.c-btn-group {
+    margin: 0;
+    padding: 0;
+}
+
+.c-btn {
+    margin: 0;
+    padding: 0;
+}
+
+
+
+
+
+
+
+.gm-style-iw {
+    padding: .5em;
+    width: 200px !important;
+    height: 90px !important;
+}
+
+.gm-style-iw p {
+  margin: 0;
+}
+
+
+
+.control-ui{
+  background-color:#fff;
+  cursor: pointer;
+  height: 2.5em;
+  margin-top: .5em;
+  margin-right: .5em;
+  text-align: center;
+  user-select: none;
+  width: 4em;
+}
+.control-text{
+  font-size: 12px;
+  padding: .5em 0 .5em 0;
+  user-select: none;
+}
+
+.c-btn--selectable__label {
+  background-color: #0f3d4c;
+  border-bottom: 1px solid #26505d;
+  border-right: 1px solid #26505d;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.5;
+  margin: 0;
+  padding: .25rem 0;
+  text-align: center;
+  transition: 0s;
+  user-select: none;
+}
+
+.c-btn--selectable__label:last-of-type {
+  border-right: 0;
+}
+
+.c-btn--selectable__label,
+.c-btn--selectable__label:first-of-type,
+.c-btn--selectable__label:last-of-type {
+  border-radius: 0px;
+}
+
+
+@media (min-width:768px) {
+  .panel {
+      display: block;
+  }
+
+  .bar {
+      display: none;
+  }
+
+
+
+  .c-form {
+      position: relative;
+      left: 0;
+      top: 1.25rem;
+      padding: 0;
+  }
+
+  .c-main-header__logo {
+      margin-left: 0;
+      margin-right: 0;
+      float: right;
+      padding: 0.5em 1em;
+      width: 180px;
+  }
+
+  .control-ui {
+    width: 8em;
+  }
+
+}
+
+
+/* SNAZZY INFO BOX CHANGES */
+.si-content :last-child {
+  margin-bottom:0;
+}
+
+.si-content-more-link,
+.si-content-more-link:visited {
+  color: #e4b53c;
+  cursor: pointer;
+  text-decoration: none;
+}
+.si-content-more-link:hover {
+  text-decoration: underline;
+}
 
 
 /* == ADD TO BASE.SCSS ====================================================== */
@@ -111,7 +268,17 @@ input[type=search] {
   .infoPanel {
     min-height: calc(100vh - 8.125rem);
   }
-}
+  .c-map-header {
+      height: 6rem;
+      padding: .5rem;
+  }
+
+  .map {
+      height: calc(100vh - 11rem);
+  }
+
+ }
+
 
 @media (max-width: 767px) {
   .infoPanel {
@@ -131,83 +298,19 @@ input[type=search] {
       font-size: .75rem;
       padding: 0;
   }
-}
-
-
-
-@media (min-width: 768px) {
-    .c-map-header {
-        border-bottom: 2px solid #f9f9f9;
-        background-color: #0f3d4c;
-        height: 5rem;
-    }
-}
-
-
-.c-map-header__title {
-    color: #fdfdfd;
-    margin: 1rem;
-    width: 100%;
-}
-
-
-
-
-.gm-style-iw {
-    padding: .5em;
-    width: 200px !important;
-    height: 90px !important;
-}
-
-.gm-style-iw p {
-  margin: 0;
-}
-
-
-.control-ui{
-  background-color:#fff;
-  cursor: pointer;
-  height: 2.5em;
-  margin-top: .5em;
-  margin-right: .5em;
-  text-align: center;
-  user-select: none;
-  width: 4em;
-}
-.control-text{
-  font-size: 12px;
-  padding: .5em 0 .5em 0;
-  user-select: none;
-}
-
-@media (min-width: 768px) {
-
-  .control-ui {
-    width: 8em;
-  }
-  .c-form {
-    position: relative;
-    left: 0;
-    top: 1em;
-    padding: 0;
-
+  .c-map-header {
+      height: 4rem;
+      padding: .5rem;
   }
 
-  .c-main-header__logo {
-    margin-left: 0;
-    margin-right: 0;
-    float:right;
-    padding: 0.5em 1em;
-  }
-
-
 }
 
-@media only screen and (max-device-width:400px)  {
 
+@media (max-width: 400px) {
   .map {
       height: calc(100vh - 5.75rem);
   }
+
 
 
   .c-form {
@@ -231,113 +334,4 @@ input[type=search] {
     line-height: 2.6;
   }
 
-}
-
-
-
-
-
-.footer {
-  border-top: 2px solid #f9f9f9;
-  background-color: #fff;
-  width: 100%;
-  position: fixed;
-  padding: 0;
-  bottom: 0;
-}
-
-.panel {
-  display: none;
-}
-
-.bar {
-  background-color: #0f3d4c;
-  line-height: 1.5;
-  padding: .25em;
-  text-align: center;
-}
-
-.bar a {
-  display: block;
-  height: 100%;
-  color: #fff;
-  text-decoration: none;
-}
-
-
-.c-btn-group {
-    margin: 0;
-    padding: 0;
-}
-
-.c-btn {
-    margin: 0;
-    padding: 0;
-}
-
-.c-btn--selectable {
-  display: none;
-}
-
-.c-btn--selectable__label {
-  background-color: #0f3d4c;
-  border-bottom: 1px solid #26505d;
-  border-right: 1px solid #26505d;
-  color: #fff;
-  cursor: pointer;
-  font-size: 1rem;
-  font-weight: normal;
-  line-height: 1.5;
-  margin: 0;
-  padding: .25rem 0;
-  text-align: center;
-  transition: 0s;
-  user-select: none;
-}
-
-
-.c-btn--selectable__label:last-of-type {
-  border-right: 0;
-}
-
-
-@media (min-width:768px) {
-  .panel {
-    display: block;
-  }
-  .bar {
-    display: none;
-  }
-}
-
-@media (min-width: 1200px) {
-  .panel {
-    display: block;
-  }
-  .bar {
-    display: none;
-  }
-}
-
-
-.c-btn--selectable__label,
-.c-btn--selectable__label:first-of-type,
-.c-btn--selectable__label:last-of-type {
-  border-radius: 0px;
-}
-
-
-/* SNAZZY INFO BOX CHANGES */
-.si-content :last-child {
-  margin-bottom:0;
-}
-
-.si-content-more-link,
-.si-content-more-link:visited {
-  color: #e4b53c;
-  cursor: pointer;
-  text-decoration: none;
-}
-.si-content-more-link:hover {
-  text-decoration: underline;
 }
