--- a/css/map.css
+++ b/css/map.css
@@ -30,12 +30,13 @@ body {
 
 
 .footer {
+  bottom: 0;
   border-top: 2px solid #f9f9f9;
   background-color: #fff;
-  width: 100%;
+  height: 3.5rem;
   position: fixed;
   padding: 0;
-  bottom: 0;
+  width: 100%;
 }
 .panel {
   display: none;
@@ -64,11 +65,6 @@ body {
     margin: 0;
     padding: 0;
 }
-
-
-
-
-
 
 
 .gm-style-iw {
@@ -274,7 +270,7 @@ input[type=search] {
   }
 
   .map {
-      height: calc(100vh - 11rem);
+      height: calc(100vh - 9.5rem);
   }
 
  }
@@ -302,24 +298,36 @@ input[type=search] {
       height: 4rem;
       padding: .5rem;
   }
+.map {
+    height: calc(100vh - 7.5rem);
+}
+
+  .c-form {
+      padding: 0;
+      margin-top: .5rem;
+  }
+  .c-main-header__logo {
+      margin-top: .2rem;
+  }
 
 }
 
 
 @media (max-width: 400px) {
-  .map {
-      height: calc(100vh - 5.75rem);
-  }
 
 
 
   .c-form {
     padding: 0;
-    margin-top: 0;
+    margin-top: .5rem;
     margin-bottom: 0;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
+  }
+
+  .c-main-header__logo {
+      margin-top: .25rem;
   }
 
   .c-form__input, input[type=text] {
