--- a/css/map.css
+++ b/css/map.css
@@ -33,7 +33,7 @@ body {
   bottom: 0;
   border-top: 2px solid #f9f9f9;
   background-color: #fff;
-  height: 3.5rem;
+  min-height: 3.5rem;
   position: fixed;
   padding: 0;
   width: 100%;
@@ -275,6 +275,17 @@ input[type=search] {
 
  }
 
+@media (min-width: 768px) and (orientation: portrait) {
+    .map {
+        height: calc(100vh - 11rem);
+    }
+}
+
+@media (min-width: 1024px) and (orientation: portrait) {
+    .map {
+        height: calc(100vh - 9.5rem);
+    }
+}
 
 @media (max-width: 767px) {
   .infoPanel {
