--- a/css/map.css
+++ b/css/map.css
@@ -28,8 +28,24 @@ body {
 .c-map-header__title {
     color: #fdfdfd;
     font-size: 2rem;
-    margin: 1.25rem;
+    margin: 1rem 0 0 1.25rem;
     width: 100%;
+}
+
+.c-map-header .c-utility-nav__list {
+  margin-left:1.25rem;
+  text-align:left;
+}
+.c-map-header .c-utility-nav__item {
+  font-size:0.8rem;
+}
+.c-map-header .c-utility-nav__link {
+  color:#fff;
+  padding-top:0;
+  padding-bottom:0;
+}
+.c-map-header .c-utility-nav__item:first-of-type .c-utility-nav__link {
+  padding-left:0;
 }
 
 .c-map-container {
