--- a/css/map.css
+++ b/css/map.css
@@ -71,6 +71,7 @@ body {
   display: none;
 }
 .bar {
+  border-bottom: 1px solid #26505d;
   background-color: #0f3d4c;
   line-height: 1.5;
   padding: .25em;
@@ -139,15 +140,15 @@ body {
 }
 .c-btn--selectable__label {
   background-color: #0f3d4c;
-  border-bottom: 1px solid #26505d;
-  border-right: 1px solid #26505d;
+  border-bottom: 1px solid #26505d !important;
+  border-right: 1px solid #26505d !important;
   color: #fff;
   cursor: pointer;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1.4;
   margin: 0;
-  padding: .25rem 0;
+  padding: .5rem 0  !important;;
   text-align: center;
   transition: 0s;
   user-select: none;
@@ -160,7 +161,7 @@ body {
 .c-btn--selectable__label,
 .c-btn--selectable__label:first-of-type,
 .c-btn--selectable__label:last-of-type {
-  border-radius: 0px;
+  border-radius: 0 !important;
 }
 
 
